# CPP_Problemas_Entrevista

./: CMakeLists.txt  README.md  main.cpp
CPP - KnightRider_CPP/: RoleDoCavalo.pro  RoleDoCavalo.sh  aobserver.h  apecaxadrez.h  asubject.h  caminho.cpp  caminho.h  cavalo.cpp  cavalo.h  cronometro.cpp  cronometro.h  main.cpp  megasena.cpp  megasena.h  observer.cpp  observer.h  player.cpp  player.h  subject.cpp  subject.h  tabuleiro.cpp  tabuleiro.h
CPP - TDD-CPP-Treino/: CMakeLists.txt  main.cpp  test.db
CPP - TDD-CPP-Treino/example/: CMakeLists.txt  Soundex.cpp  Soundex.h
CPP - TDD-CPP-Treino/example/sqlite3/: appveyor.yml
CPP - sqllite-Teste/: CMakeLists.txt  main.cpp
CPP - sqllite-Teste/src/: CMakeLists.txt  sqllite.cpp  sqllite.h
CPP - sqllite-Teste/src/test/: CMakeLists.txt  sqllite_test.cpp
src/: CMakeLists.txt  array.cpp  array.h  primitive.cpp  primitive.h
test/: CMakeLists.txt  array_test.cpp  primitive_test.cpp
